spict v1.2.8 (Release date: 2019-09-22)
============

New features:

* get.prod.regimes() - Function for the calculation of AIC for spict
  models with different regime shift breaks.

* shorten.inp() - Function that allows to shorten the input data to
  any specified time interval.


Minor changes:



Bug fixes:

*



spict v1.2.7 (Release date: 2019-04-03)
============

New features:

* Added new management scenario: ICES MSY advice rule
* Added NEWS file

Minor changes:

* Updated documentation for check.inp and spict2DLMtool
* Makefile now takes the version number from DESCRIPTION file